// Copyright 2015-2017, Cyrill @ Schumacher.fm and the CoreStore contributors
//
// Licensed under the Apache License, Version 2.0 (the "License"); you may not
// use this file except in compliance with the License. You may obtain a copy of
// the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations under
// the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "fm.schumacherfm.caddy.esi";
option java_outer_classname = "CaddyESIProto";

package esigrpc;

// Interface exported by the server. All types of a "repeated string" returns a
// balanced slice where i=key and i+1=value, the next key can be accessed via
// i=i+2. A key can occur multiple times but has different values. This
// implementation was easier to achieve than the classical map[string][]string.
service HeaderBodyService {
    rpc GetHeaderBody (ResourceArgs) returns (HeaderBody) {
    }
}

// ResourceArg same as backend.ResourceArgs but stripped of some fields for
// security reasons.
message ResourceArgs {
    message ExternalReq {
        string method = 1;
        string url = 2;
        string proto = 3;
        int32 proto_major = 4;
        int32 proto_minor = 5;
        repeated string header = 6;
        int64 ContentLength = 7;
        repeated string transfer_encoding = 8;
        bool close = 9;
        string host = 10;
        string remote_addr = 11;
        string real_ip = 12;
        string request_uri = 13;
        bytes body = 14;
    }

    ExternalReq external_req = 1; // required
    string url = 2; // address or alias of the microservice
    uint64 max_body_size = 3;
    string key = 4; // required
    repeated string return_headers = 5;
    bool return_headers_all = 6;
}

// HeaderBody a return value like in the backend package but here the three
// return arguments are combined into one struct. If error is empty, then no
// error has happend.
message HeaderBody {
    repeated string header = 1;
    bytes body = 2;
}
